hphp/test/slow/unset/1120.php.expectf
Fatal error: Invalid use of `$this`: it cannot be `unset` in %s/test/slow/unset/1120.php on line 5